--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from './BaseLayout.astro'
 import ImageGallery from '../components/ImageGallery.astro'
+import AutoCarousel from '../components/AutoCarousel.astro';
 import { formatDate } from '../utils'
 
 import '../styles/markdown.css'
@@ -25,6 +26,7 @@ const description = frontmatter?.description
   </article>
 
   <ImageGallery />
+  <AutoCarousel />
 
   <footer class="mt-24 pb-10 border-t border-black/5 dark:border-white/5 pt-8">
     <a href="/" class="text-sm opacity-60 hover:opacity-100 transition-opacity">← 返回首页</a>
