--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,13 @@
 import BaseLayout from '../layouts/BaseLayout.astro'
 ---
 
+
 <BaseLayout title="关于">
-  <!-- 关于页面 -->
+    <p class="font-light">
+        Hello , 我叫洋山芋。这里是我的个人博客。
+        <br>
+        <br>
+        本职工作是香薰蜡烛公司的 3D 建模师，写代码纯属兴趣。这个博客属于偶然间创建出，会存在很多不合理。
+        由于不是专业写代码，很多代码都是通过 Ai 生成，主题参考自 <a class="font-normal" href="https://antfu.me">antfu</a>。
+    </p>
 </BaseLayout>
