--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import BackToTop from '../components/BackToTop.astro'
 
-import '../styles/global.css';
+// import '../styles/global.css';
 
 export interface Props {
   title?: string
