--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import PostList from '../components/PostList.astro'
+import TalkList from '../components/TalkList.astro'
 ---
 
 <BaseLayout>
-  <PostList />
+  <TalkList />
 </BaseLayout>
